--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -82,6 +82,7 @@
             <li>Angular 8 with Bootstrap 4</li>
             <li>Login with google feature Oath2.</li>
             <li>Paypal Integration with Angular </li>
+            <li>Image Upload using Cloudinary Service</li>
             <li>Implemented Http Interceptors, Custom Pipes, Guard.</li>
             <li>Implemented component to component communication using service. (cart subscribes to items in cart)</li>
             <li>Used debounce time so that we hit server only once when user clicks multiple times + icon in cart items
