--- a/src/app/components/addproduct/addproduct.component.html
+++ b/src/app/components/addproduct/addproduct.component.html
@@ -20,7 +20,8 @@
 
                                 </div>
                                 <div class="form-group">
-                                    <label for="description">Image Url</label>
+                                    
+                                    <label for="description"><button class="btn btn-outline-warning" (click)="showImageUploadDialog()">Select Image</button></label>
                                     <input id="imageUrl" name="imageUrl" type="text" class="form-control"
                                         placeholder="leave blank if no image url" formControlName="imageUrl">
                                 </div>
